# giga_auto_qc

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
giga_auto_qc/: __init__.py  assessments.py  run.py  utils.py  workflow.py
giga_auto_qc/data/: README.md  test_qc_parameters.json
giga_auto_qc/test/: test_assessments.py  test_utils.py
giga_auto_qc/tests/: test_assessments.py  test_cli.py  test_utils.py
